# het_agents

./: .gitignore  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: het_agents.tex  het_agents_pres.tex  refs.bib  task_paper.py
src/het_agents/: __init__.py  config.py  functions.py  solver_functions.py  utilities.py
src/het_agents/analysis/: benchmark.py  model.py  solver_functions.py  task_analysis.py
src/het_agents/data/: parameters_dict_incomplete_mkt.pkl  parameters_dict_standard_mkt.pkl
src/het_agents/data_management/: __init__.py  produce_grids.py  task_data_management.py
src/het_agents/final/: __init__.py  plot.py  task_final.py
tests/analysis/: econ_data_fixture.pkl  solvers_fixture.pkl  test_model.py  test_predict.py  test_solver_functions.py
tests/data_management/: test_clean_data.py
