[metadata]
name = het_agents
description = Solve Heterogeneous Agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoseLores/het_agents
author = Jose Lores Diz
author_email = ldpepe99@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/JoseLores/het_agents
    Documentation = https://github.com/JoseLores/het_agents
    Github = https://github.com/JoseLores/het_agents
    Tracker = https://github.com/JoseLores/het_agents/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/het_agents/_version.py
